Bug 396751 - Global shortcut new instance for entry 9 missing
Summary: Global shortcut new instance for entry 9 missing
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-22 11:50 UTC by LinG
Modified: 2018-07-22 12:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LinG 2018-07-22 11:50:32 UTC
I seem to be missing a global shortcut in the latte global shortcuts section.

I have all the shortcuts ranging from:

`new instance for entry` 1 till 19 but I don't have one for entry 9, I do have an `active entry 9` shortcut but not one to create a new instance

I tried to kill latte and then delete the shortcuts to reset them to default when I started latte up again, but that didn't solve it.
Comment 1 Michail Vourlakos 2018-07-22 11:57:03 UTC
me too...
nice catch...
Comment 2 Michail Vourlakos 2018-07-22 12:11:22 UTC
Git commit 265383ce345681ec15354632c054a6d3a40ac0eb by Michail Vourlakos.
Committed on 22/07/2018 at 12:06.
Pushed by mvourlakos into branch 'master'.

missing global shortcuts new instance record 9

Summary:
In Latte global shortcuts is missing one record
for New Instance of ninth record
FIXED-IN: 0.8.1

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D14273

M  +1    -1    app/globalshortcuts.cpp

https://commits.kde.org/latte-dock/265383ce345681ec15354632c054a6d3a40ac0eb
Comment 3 Michail Vourlakos 2018-07-22 12:12:50 UTC
Git commit 08f0fd35b4958dd70a884e6aebb6c0acc8286aa8 by Michail Vourlakos.
Committed on 22/07/2018 at 12:12.
Pushed by mvourlakos into branch 'v0.8'.

missing global shortcuts new instance record 9

Summary:
In Latte global shortcuts is missing one record
for New Instance of ninth record
FIXED-IN: 0.8.1

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D14273

M  +1    -1    app/globalshortcuts.cpp

https://commits.kde.org/latte-dock/08f0fd35b4958dd70a884e6aebb6c0acc8286aa8