missing global shortcuts new instance record 9

Summary:
In Latte global shortcuts is missing one record
for New Instance of ninth record

BUG: 396751
FIXED-IN: 0.8.1

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D14273